feat: add class query and delete
